# interpolation_based_reed_solomon_decoder

./: CMakeLists.txt  berlecamp_decoder_results_0_5rate_max_errs.txt  berlecamp_decoder_results_0_75rate_half_errs.txt  interpolation_decoder_results_0_5rate_max_errs.txt  interpolation_decoder_results_0_5rate_max_errs_unimproved.txt  interpolation_decoder_results_0_75rate_half_errs.txt  interpolation_decoder_results_0_75rate_half_errs_unimproved.txt  main.cpp  makeplots.gp  maple_prototype.mws  new_proto.mw
fast_interpolation_reed_solomon_decoder/: CMakeLists.txt  FFT1023GT.cpp  FFT127.CPP  FFT2047GT.cpp  FFT255.CPP  FFT4095GT.cpp  FFT511.CPP  FFT63.CPP  FFT7.CPP  berlecamp_massey_decoder.cpp  berlecamp_massey_decoder.h  fast_interpolation_reed_solomon_decoder.cpp  fast_interpolation_reed_solomon_decoder.h  fft.h  galois_field.cpp  galois_field.h  linalg.cpp  linalg.h  socow_vector.h
fft/: FFT255.CPP  FFT7.CPP
tests/: CMakeLists.txt  galois-field-test.cpp
